third_party/rust/cxx/v1/crate/tests/ui/bad_explicit_impl.stderr
error: unsupported Self type of explicit impl
 --> tests/ui/bad_explicit_impl.rs:7:5
  |
7 |     impl fn() -> &S {}
  |     ^^^^^^^^^^^^^^^^^^
